# my-project

./: .cursorrules
03_Инструменты/: 02_инструкция.md  установить_расширения_Cursor.sh
04_Агенты/: 01_презентация.html  03_практика.md  README.md
05_Telegram-бот/: 01_презентация.html  02_инструкция.md  03_практика.md  README.md  код_ai_бота.py  код_контекст_бота.py
06_API/: 01_презентация.html  02_инструкция.md  03_практика.md  README.md  пример_api_запроса.py  пример_связки.py
06_API/04_дополнительные_материалы/: README.md  mcp_config.md  теория_автоматизация_бизнеса.md  шаблон_env.md
06_API/04_дополнительные_материалы/notion-ai-crm/: README_RU.md  pipeline.py  pyproject.toml
06_API/04_дополнительные_материалы/notion-ai-crm/agents/: action_agent.py
06_API/04_дополнительные_материалы/notion-ai-crm/notion-ai-crm/: .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt  server.py
06_API/04_дополнительные_материалы/notion-ai-crm/notion-ai-crm/agents/: base_agent.py  icp_agent.py  priority_agent.py
06_API/04_дополнительные_материалы/notion-ai-crm/notion-ai-crm/tools/: __init__.py  action_tools.py  config_tools.py  icp_tools.py  priority_tools.py  research_tools.py  signal_tools.py
07_Вайб-кодинг/: 01_презентация.html  03_практика.md  07_практика.html  инструкция.md
07_Вайб-кодинг/04_дополнительные_материалы/: computer_use.md  google_stitch.md  полезные_ресурсы.md
telegram-bot/: .dockerignore  .gitignore  Dockerfile  REGламент_для_бухгалтера.md  bot.py  config.py  google_sheets.py  requirements.txt  tax_bot_template.xlsx
Моя_жизнь/: README.md
(+66 files in other folders)
