[project]
name = "notion-ai-crm"
version = "0.1.0"
description = "AI-powered CRM copilot that scores, researches, and prioritizes leads in Notion"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
crm-pipeline = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
